--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.15.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.510.0",
     "motion": "^12.11.3",
     "next": "15.3.2",
